--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,18 +1,29 @@
 [versions]
-errorProne = "2.36.0"
-autoService = "1.1.1"
-jspecify = "1.0.0"
-
-jpaApi = "3.2.0"
-checkerFramework = "3.48.2"
-
 errorPronePlugin = "4.1.0"
 checkerFrameworkPlugin = "0.6.46"
 spotlessPlugin = "7.0.0.BETA4"
 mavenPublishPlugin = "0.30.0"
+
+jspecify = "1.0.0"
+errorProne = "2.36.0"
+autoService = "1.1.1"
+
+checkerFramework = "3.48.2"
+jakartaPersistenceApi = "3.2.0"
 
 [plugins]
 errorProne = { id = "net.ltgt.errorprone", version.ref = "errorPronePlugin" }
 checkerFramework = { id = "org.checkerframework", version.ref = "checkerFrameworkPlugin" }
 spotless = { id = "com.diffplug.spotless", version.ref = "spotlessPlugin" }
 mavenPublish = { id = "com.vanniktech.maven.publish", version.ref = "mavenPublishPlugin" }
+
+[libraries]
+jspecify = { module = "org.jspecify:jspecify", version.ref = "jspecify" }
+errorProneCore = { module = "com.google.errorprone:error_prone_core", version.ref = "errorProne" }
+errorProneCheckApi = { module = "com.google.errorprone:error_prone_check_api", version.ref = "errorProne" }
+errorProneTestHelpers = { module = "com.google.errorprone:error_prone_test_helpers", version.ref = "errorProne" }
+autoServiceAnnotations = { module = "com.google.auto.service:auto-service-annotations", version.ref = "autoService" }
+autoService = { module = "com.google.auto.service:auto-service", version.ref = "autoService" }
+
+checkerFramework = { module = "org.checkerframework:checker", version.ref = "checkerFramework" }
+jakartaPersistenceApi = { module = "jakarta.persistence:jakarta.persistence-api", version.ref = "jakartaPersistenceApi" }
