--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,12 +1,12 @@
-name: Dependency Submission
+name: CI
 on:
-  push:
-    branches: [ $default-branch ]
   pull_request:
-    branches: [ $default-branch ]
+    branches:
+      - "**"
 
 jobs:
-  test:
+  check:
+    if: github.ref == 'refs/heads/${{ github.default_branch }}'
     runs-on: ubuntu-latest
     steps:
       - name: Checkout sources
