--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,11 +2,10 @@ name: CI
 on:
   pull_request:
     branches:
-      - "**"
+      - master
 
 jobs:
   check:
-    if: github.ref == 'refs/heads/${{ github.default_branch }}'
     runs-on: ubuntu-latest
     steps:
       - name: Checkout sources
