feat: impl docgen

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,13 @@
+# Asis generated docs
+generated-docs/*
+
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
 # ALL!!
 .idea/*
 !.idea/eclipseCodeFormatter.xml
+!.idea/ktfmt.xml
 
 # User-specific stuff
 .idea/**/workspace.xml
